<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="de.troido.bledemo.MainActivity">

    <Button
        android:id="@+id/btn_epd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_epd"/>

    <Button
        android:id="@+id/btn_sensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sensor"/>

    <Button
        android:id="@+id/btn_graph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_graph" />
</LinearLayout>
