<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/epd_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".epd.EpdCameraFragment">

    <FrameLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_default"
        tools:ignore="UselessParent">

        <!-- The primary full-screen view. This can be replaced with whatever view
             is needed to present your content, e.g. VideoView, SurfaceView,
             TextureView, etc. -->
        <com.journeyapps.barcodescanner.BarcodeView
            android:id="@+id/qr_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black1" />

        <TextView
            android:id="@+id/cam_permission_txt"
            style="@style/CameraInfoText"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:text="@string/camera_permission_info"
            android:textAlignment="center"
            android:visibility="gone" />

        <Button
            android:id="@+id/cam_permission_btn"
            style="@style/CustomButton"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_60"
            android:text="@string/got_it"
            android:visibility="gone" />

        <!-- This FrameLayout insets its children based on system windows using
             android:fitsSystemWindows. -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_default"
            android:fitsSystemWindows="true"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/fullscreen_content_controls"
                style="?metaButtonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:background="@color/black_overlay"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <Button
                    android:id="@+id/dummy_button"
                    style="?metaButtonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dummy_button" />

            </LinearLayout>
        </FrameLayout>
    </FrameLayout>
</FrameLayout>
